--- a/views/pages/contact.twig
+++ b/views/pages/contact.twig
@@ -8,28 +8,28 @@
             {{ form_start(contact_form) }}
 
             <div class="form-1 form-left">
-                <label> Société </label>
-                <div class="inputs">{{ form_widget(contact_form.entreprise, {'attr' : {'index' : '0'}}) }}</div>
+                <label class='labels'> Société </label>
+                <div class="inputs">{{ form_widget(contact_form.entreprise, {'attr' : {'data-index' : '0'}}) }}</div>
 
-                <label> Email </label>
-                <div class="inputs">{{ form_widget(contact_form.email, {'attr' : {'index' : '1'}}) }}</div>
+                <label class='labels'> Email </label>
+                <div class="inputs">{{ form_widget(contact_form.email, {'attr' : {'data-index' : '1'}}) }}</div>
             </div>
 
             <div class="form-1 form-right">
-                <label> Nom / Prenom </label>
-                <div class="inputs right-input">{{ form_widget(contact_form.name, {'attr' : {'index' : '2'}}) }}</div>
+                <label class='labels'> Nom / Prenom </label>
+                <div class="inputs right-input">{{ form_widget(contact_form.name, {'attr' : {'data-index' : '2'}}) }}</div>
                 <div class="clear"></div>
 
-                <label> Téléphone </label>
-                <div class="inputs right-input">{{ form_widget(contact_form.tel, {'attr' : {'index' : '3'}}) }}</div>
+                <label class='labels'> Téléphone </label>
+                <div class="inputs right-input">{{ form_widget(contact_form.tel, {'attr' : {'data-index' : '3'}}) }}</div>
                 <div class="clear"></div>
 
             </div>
             <div class="clear"></div>
 
             <div class="form-2">
-                <label> Commentaire </label>
-                <div>{{ form_widget(contact_form.body, {'attr' : {'index' : '4'}}) }}</div>
+                <label class='labels'> Commentaire </label>
+                <div class="inputs">{{ form_widget(contact_form.body, {'attr' : {'data-index' : '4'}}) }}</div>
             </div>
         </div>
 
