--- a/views/pages/docs.twig
+++ b/views/pages/docs.twig
@@ -15,8 +15,8 @@
 
             <div class="docs-card-bot">
                 <div class="docs-card-bot-line">
-                    Certification n°1
-                    <img src="{{global.request.basepath}}/assets/img/fiche-securite-icon.png" alt="">
+                    <span>Certification n°1</span>
+                    <img class="center-img-2" src="{{global.request.basepath}}/assets/img/fiche-securite-icon.png" alt="">
                 </div>
             </div>
 
@@ -31,12 +31,12 @@
 
             <div class="docs-card-bot">
                 <div class="docs-card-bot-line">
-                    Fiche de sécurité n°1
-                    <img src="{{global.request.basepath}}/assets/img/download.png" alt="">
+                    <span>Fiche de sécurité n°1</span>
+                    <img class="center-img-1" src="{{global.request.basepath}}/assets/img/download.png" alt="">
                 </div>
                 <div class="docs-card-bot-line">
-                    Fiche de sécurité n°1
-                    <img src="{{global.request.basepath}}/assets/img/download.png" alt="">
+                    <span>Fiche de sécurité n°1</span>
+                    <img class="center-img-1" src="{{global.request.basepath}}/assets/img/download.png" alt="">
                 </div>
             </div>
 
