--- a/web/assets/css/contact.css
+++ b/web/assets/css/contact.css
@@ -7,26 +7,27 @@
     height:750px;
 }
 
-.form-contact{
+.form{
     position:absolute;
     top:4%;
     left:50%;
     transform:translateX(-50%);
     width:40%;
-    height:68%;
+    height:71%;
     background-color:#f5f5f5;
     -webkit-box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.29);
     -moz-box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.29);
     box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.29);
+    padding: 40px;
 }
 
-form{
-    margin:50px 50px;
+.form-contact{
+    position:relative;
 }
 
 .form-1{
     width:50%;
-    height:200px;
+    height:180px;
     color:#2e3689;
     float:left;
 }
@@ -46,7 +47,8 @@ form{
 }
 
 .form-1 input:focus{
-   border: 1px solid red;
+    border: 1px solid red;
+    transition: all 0.4s ease 0s;
 }
 
 .inputs{
@@ -83,11 +85,12 @@ form{
 
 .form-2 textarea:focus{
     border: 1px solid red;
+    transition: all 0.5s ease 0s;
 }
 
 .form-2 div{
     width:125%;
-    height:200px;
+    height:220px;
     background-color:#fefefe;
 }
 
@@ -99,14 +102,14 @@ form{
 
 .button-form{
     background-color:#2e3689;
-    width:15%;
+    width:30%;
     height:50px;
     text-align:center;
     position:absolute;
-    top:77%;
+    top:100%;
     left:50%;
-    transform:translateX(-50%);
-    transition: all 0.5s ease 0s;
+    transform:translate(-50%, -50%);
+    transition: all 0.3s ease 0s;
     padding:15px 0px;
     color:#fefefe;
 }
