responsive + style fix

--- a/views/pages/docs.twig
+++ b/views/pages/docs.twig
@@ -1,8 +1,8 @@
 {{ include('partials/header.twig') }}
 
-<div class="container">
+<div class="docs-container container">
 
-    <h1 class="title-class">Les documents utiles ...</h1>
+    <h1 class="title-class docs-title">Les documents utiles ...</h1>
 
     <div class="docs-cards">
 
@@ -15,7 +15,7 @@
 
             <div class="docs-card-bot">
                 <div class="docs-card-bot-line">
-                    Certification n°1
+                    Fiche de sécurité CO²
                     <img src="{{global.request.basepath}}/assets/img/fiche-securite-icon.png" alt="">
                 </div>
             </div>
@@ -31,11 +31,11 @@
 
             <div class="docs-card-bot">
                 <div class="docs-card-bot-line">
-                    Fiche de sécurité n°1
+                    Certificat d'agrément
                     <img src="{{global.request.basepath}}/assets/img/download.png" alt="">
                 </div>
                 <div class="docs-card-bot-line">
-                    Fiche de sécurité n°1
+                    Approbation SII
                     <img src="{{global.request.basepath}}/assets/img/download.png" alt="">
                 </div>
             </div>
