--- a/views/pages/plan.twig
+++ b/views/pages/plan.twig
@@ -1,15 +1,15 @@
 {{ include('partials/header.twig') }}
 
-<div class="title-class">
+<div class="title-class plan-title">
 	<h1>Plan d'accès à l'usine Beaumont</h1>
 </div>
 
 <div class="plan-map-container">
-	
+	<div class="map-overlay"></div>
 	<iframe
 	class="plan-map"
 	width="100%"
-	height="600"
+	height="700"
 	frameborder="0" style="border:0"
 	src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBeY1vxcHIf-8Xzf5OJMXNZXLrhJs2g-io	
 	&q=Beaumont+Ets+Sa,migennes&zoom=16" allowfullscreen>
@@ -33,12 +33,12 @@
 			</div>
 			<div class="plan-card-text">	
 				<span>3 rue Georges Clemenceau<br>
-				89400 <strong>MIGENNES</strong></span>
+					89400 <strong>MIGENNES</strong></span>
+				</div>
+				<div class="clear"></div>
 			</div>
-			<div class="clear"></div>
 		</div>
 	</div>
-</div>
 
 </div>
 
