--- a/views/pages/product-ext.twig
+++ b/views/pages/product-ext.twig
@@ -1,30 +1,39 @@
 {{ include('partials/header.twig') }}
 
-<section class="ext-info">
+<section class="products-info">
 	<div class="container">
 		<h1>Nos produits correspondent à des standards issus des besoins de nos <br> nombreux clients.</h1>
 		<p>L'experience qui est la notre ajoutée à notre capacité de fabrication, nous permet de concevoir rapidement des produits liés à de nouveaux concepts, alors n'hésitez pas à prendre contact avec nous. Toute notre fabrication est conforme aux réglementations européennes et à d'autres exigences normatives selon les domaines d'utilisation.</p>
 	</div>
 </section>
 
-<section class="ext-product">
-	<div class="ext-background">
-		<div class="ext-content">
-			<h1><strong>EXTINCTEUR</strong></h1>
+<section class="products-product">
+	<div class="products-background">
+		<div class="products-content">
+			<h1><strong>BOUTEILLES D'EXTINCTEURS</strong></h1>
 			<p>Notre gamme de cartouche couvre une partie très importante des besoins dans le domaine de l'extincteur, tant par les diamètres que par le filetage des écrous.</p>
 			<p><strong>Nos produits répondent aux exigence de l'EN3-8.</strong></p>
 		</div>
 	</div>
-	<div class="ext-slider">
+	<div class="display-clear clear"></div>
+	<div class="products-slider">
 		<div class="slider-control left-control"><img src="{{global.request.basepath}}/assets/img/arrow-l.png" alt=""></div>
 		<div class="slider-img">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-01.jpg" alt="">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-02.jpg" alt="">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-03.jpg" alt="">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-04.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/extinguisher-05.jpg" alt="">
 		</div>
 		<div class="slider-control right-control"><img src="{{global.request.basepath}}/assets/img/arrow-r.png" alt=""></div>
 		<div class="clear"></div>
+		<div class="slider-text">
+			<p>Extincteur à roue & bouteilles auxiliaires extérieures</p>
+			<p>Bouteilles en peinture</p>
+			<p>Bouteilles terminées</p>
+			<p>Bouteilles usinées</p>
+			<p>Bouteilles après forge</p>
+		</div>
 	</div>
 	<div class="clear"></div>
 </section>
