--- a/views/pages/product-oth.twig
+++ b/views/pages/product-oth.twig
@@ -1,21 +1,22 @@
 {{ include('partials/header.twig') }}
 
-<section class="other-info">
+<section class="products-info">
 	<div class="container">
 		<h1>Nos produits correspondent à des standards issus des besoins de nos <br> nombreux clients.</h1>
 		<p>L'experience qui est la notre ajoutée à notre capacité de fabrication, nous permet de concevoir rapidement des produits liés à de nouveaux concepts, alors n'hésitez pas à prendre contact avec nous. Toute notre fabrication est conforme aux réglementations européennes et à d'autres exigences normatives selon les domaines d'utilisation.</p>
 	</div>
 </section>
 
-<section class="other-product">
-	<div class="other-background">
-		<div class="other-content">
+<section class="products-product">
+	<div class="products-background">
+		<div class="products-content">
 			<h1><strong>AUTRES PRODUITS</strong></h1>
 			<p>Notre gamme de cartouche couvre une partie très importante des besoins dans le domaine de l'extincteur, tant par les diamètres que par le filetage des écrous.</p>
 			<p><strong>Nos produits répondent aux exigence de l'EN3-8.</strong></p>
 		</div>
 	</div>
-	<div class="other-slider">
+	<div class="display-clear clear"></div>
+	<div class="products-slider">
 		<div class="slider-control left-control"><img src="{{global.request.basepath}}/assets/img/arrow-l.png" alt=""></div>
 		<div class="slider-img">
 			<img src="{{global.request.basepath}}/assets/img/other-01.jpg" alt="">
@@ -26,6 +27,13 @@
 		</div>
 		<div class="slider-control right-control"><img src="{{global.request.basepath}}/assets/img/arrow-r.png" alt=""></div>
 		<div class="clear"></div>
+		<div class="slider-text">
+			<p>Bouteille pour tous les gaz</p>
+			<p>Pièces détachées</p>
+			<p>Rondelles et opercules</p>
+			<p>Écrous avec ou sans opercules</p>
+			<p>Écrous en production</p>
+		</div>
 	</div>
 	<div class="clear"></div>
 </section>
