--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -13,6 +13,34 @@ nav{
     padding-bottom: 30px;
 }
 
+.burger-header
+{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.burger-header img
+{
+    height: 48px;
+}
+
+.burger-overlay
+{
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 66.6%;
+    height: 90vh; 
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    display: none;
+    transition: .2s all ease-in;  
+}
+
 .logo-header{
     width:100%;
 }
@@ -24,6 +52,7 @@ nav{
 
 .menu-header{
     width:100%;
+    position: relative;
 }
 
 .menu-header > ul{
@@ -79,12 +108,11 @@ nav{
     left: 0;
     width: 100%;
     text-align: center;
-    background-color: #fefefe;
     height: 0;
-    padding: 10px;
     overflow: hidden;
     transition: all .2s ease-out .2s;
     will-change: height;
+    background-color: #fff;
 }
 
 .menu-header > ul > li > ul > li{
@@ -141,4 +169,120 @@ nav{
     height: 5px;
     background-color: red;
     transition: all .2s ease-in;
+}
+
+@media (max-width: 1200px) 
+{
+    .logo-header img
+    {
+        height: 40px;
+        margin-bottom: -15px;
+    }
+    .menu-header > ul > li > a:after
+    {
+        height: 4px;
+    }
+    .active:before
+    {
+        height: 4px;
+    }
+}
+
+@media (max-width: 992px) 
+{
+    .logo-header
+    {
+        text-align: center;
+    }
+    .logo-header img
+    {
+        height: 40px;
+        margin-bottom: 20px;
+    }
+    .menu-header > ul
+    {
+        float: none;
+    }
+    .menu-header > ul > li > a
+    {
+        padding: 0 27px;
+    }
+    nav
+    {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
+@media (max-width: 768px) 
+{
+    .container
+    {
+        width: 100%;
+    }
+    nav
+    {
+        height: 10vh;
+        padding: 0;
+    }
+    .burger-header
+    {
+        display: block;
+    }
+    .burger-header img
+    {
+        height: 36px;
+    }
+    .logo-header
+    {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .logo-header img
+    {
+        margin: 0;
+        height: 36px;
+    }
+    .menu-header
+    {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        transform: translateX(-100%);
+        height: 100vh;
+        width: 60%;
+        background-color: #f5f5f5;
+        padding-top: 40px;
+        transition: .2s all ease-in;
+    }   
+    .menu-header > ul
+    {
+        width: 100%;
+    }
+    .menu-header > ul > li
+    {
+        display: block;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .menu-header > ul > li a
+    {
+        padding: 0;
+    }
+    .menu-header > ul > li > ul
+    {
+        z-index: 40;
+    }
+    .menu-header > ul > li > a:after{
+        top: 80%;
+    }
+    .active:before
+    {
+        top: 80%;
+    }
 }
